40-eks/app/03-frontend/gatway-api/frontend-gw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: roboshop
spec:
  parentRefs:
  - name: roboshop-gateway
    sectionName: http
  hostnames:
  - "roboshop-gw-dev.devopswiththota.online"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend
      port: 80
